<resources>
    <string name="app_name">PosApp</string>
    <string name="checkInternet">Please Check Your Internet Connection</string>

    <string name="opos_manager">Opos Manager</string>
    <string name="oshop">Oshop</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="welcome">\u0021Welcome</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email_mobile_number">Email/Mobile Number</string>
    <string name="password">Password</string>
    <string name="or_login_using">Or Login Using</string>
    <string name="don_t_have_a_account">Don’t have a account ?</string>
    <string name="sign_up_to_proceed_further">Sign up to proceed further</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="i_agree_to_the_terms_and_condition">I AGREE TO THE TERMS AND CONDITION</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="verification">VERIFICATION</string>
    <string name="text_verification">Please enter 4 digit verification code sent to +91-977053114</string>
    <string name="Resend">Didn’t received code? RESEND CODE</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="order">Order</string>
    <string name="delivery">Delivery</string>
    <string name="product">Product</string>
    <string name="more">More</string>
    <string name="more_details"><u>More Details</u></string>
    <string name="revenue_0">REVENUE- 0</string>
    <string name="see_more"><u>See More</u></string>
    <string name="procesing"><u>PROCESING</u></string>
    <string name="refunded_order">Refunded Order</string>
    <string name="save">Save</string>
    <string name="create_order">Create Order</string>
    <string name="add_product"><u>ADD PRODUCT</u></string>
    <string name="create_order_and_deliver">Create ORDER and Deliver</string>
    <string name="lookup_shipping_fee">LOOKUP SHIPPING FEE</string>
    <string name="created_date">Created Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="shipping_date">Shipping Date</string>
    <string name="source">Source</string>
    <string name="order_status">Order Status</string>
    <string name="employee_status">Employee Status</string>
    <string name="packing_status">Packing Status</string>
    <string name="update_information">Update Information</string>
    <string name="subdistrict">Subdistrict</string>
    <string name="order_pickup_address_detailed_address">Order Pickup Address (Detailed Address)</string>
    <string name="phone_number">Phone Number</string>
    <string name="recipient_name">Recipient Name</string>
    <string name="recipient">Recipient</string>
    <string name="search_location">Search Location</string>
    <string name="choose_area_location">Choose Area Location</string>
    <string name="choose_subdistrict_location">Choose Subdistrict Location</string>
    <string name="confirm">CONFIRM</string>
    <string name="deliver">Deliver</string>
    <string name="package_information">Package Information</string>
    <string name="choose_shipper">Choose Shipper</string>
    <string name="email_address">Email Address</string>
    <string name="place_order_3_500">PLACE ORDER (3,500)</string>
    <string name="discount">Discount</string>
    <string name="shipping_fee">Shipping Fee</string>
    <string name="fee_collected_from_customers">Fee collected from customers</string>
    <string name="other">Other</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="estimated_fee_for_shipping_partner">Estimated fee for shipping partner</string>
    <string name="add_new_customer">ADD NEW CUSTOMER</string>
    <string name="select_pricing_policy">Select Pricing Policy</string>
    <string name="retail_price">Retail Price</string>
    <string name="wholesale_price">Wholesale Price</string>
    <string name="shipping_information">SHIPPING INFORMATION</string>
    <string name="cod_collection">COD Collection</string>
    <string name="package_size">Package Size</string>
    <string name="choose_location">Choose Location</string>
    <string name="profile">Profile</string>
    <string name="card">Card</string>
    <string name="enter_your_location">Enter your location</string>
    <string name="choose_shop_by_category">Choose shop by Category</string>
    <string name="view_all">View all</string>
    <string name="shops_near_me">Shops near Me</string>
    <string name="groceries">Groceries</string>
    <string name="startfilter">START FILTERING</string>
    <string name="restfilter">RESET FILTER</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="checkout">Checkout</string>
    <string name="address">Address</string>
    <string name="payments">Payments</string>
    <string name="next">NEXT</string>
    <string name="back">Back</string>
    <string name="pay_using_debit_card">Pay using Debit Card</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="pay_using_credit_card">Pay using Credit Card</string>
    <string name="pay_using_paypal">Pay using Paypal</string>
    <string name="summary">Summary</string>
    <string name="change">Change</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="wishlist">Wishlist</string>
    <string name="track_order">Track Order</string>
    <string name="notifications">Notifications</string>
    <string name="log_out">Log Out</string>
    <string name="reorder">Reorder</string>
    <string name="save_profile">save profile</string>
    <string name="add_adress">Add Adress</string>
    <string name="search_and_add_product">Search and add product</string>
    <string name="stocktaking_sheet">Stocktaking Sheet</string>
    <string name="enter_code">Enter Code</string>
    <string name="inventory_quantity">Inventory quantity</string>
    <string name="discrepancy">Discrepancy</string>
    <string name="default_location">Default Location</string>
    <string name="add_notes">Add Notes</string>
    <string name="add_supplier">Add Supplier</string>
    <string name="add_new_supplier">Add new Supplier</string>
    <string name="choose_payment_method">Choose payment method</string>
    <string name="estimated_fee">Estimated Fee</string>
    <string name="create_order_and_approve">Create order and approve</string>
    <string name="change_order_method">Change Order Method</string>
    <string name="choose_pick_up_address">Choose pick-up address</string>
    <string name="display_settings">Display Settings</string>
    <string name="inventory_info">Inventory Info</string>
    <string name="product_name">Product Name</string>
    <string name="in_stock">In Stock</string>
    <string name="apply_promotion">Apply Promotion</string>
    <string name="total_quantity">Total Quantity</string>
    <string name="reatil_price">Reatil Price</string>
    <string name="pick_up_at_store">Pick up at store</string>
    <string name="call_shipper">Call Shipper</string>
    <string name="forward_order_to_shipping_partner">Forward order to shipping partner</string>
    <string name="warning">Warning</string>

    <string name="facebook_app_id">1129492334254764</string>

</resources>