<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <androidx.core.widget.NestedScrollView
            android:layout_above="@+id/ll_singUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:padding="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="vertical"
                >


                <ImageView
                    android:layout_marginLeft="-20dp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:id="@+id/iv_Logo"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/logo" />


                <TextView
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/sign_up"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:textSize="@dimen/_22sdp" />

                <TextView
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_to_proceed_further"
                    android:textColor="#595959"
                    android:textStyle="bold"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="#B8B8B8"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12sdp" />

                <EditText
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:elevation="@dimen/_3sdp"
                    android:textSize="@dimen/_12sdp"
                    android:padding="@dimen/_10sdp"
                    android:background="@drawable/edt_border"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:text="Remo khan"
                    android:inputType="textEmailAddress"
                    android:textColor="#232333" />

                <TextView
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="#B8B8B8"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12sdp" />

                <EditText
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:elevation="@dimen/_3sdp"
                    android:textSize="@dimen/_12sdp"
                    android:padding="@dimen/_10sdp"
                    android:background="@drawable/edt_border"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:text="example@gmail.com"
                    android:inputType="textEmailAddress"
                    android:textColor="#232333" />

                <TextView
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_number"
                    android:textColor="#B8B8B8"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12sdp" />

                <EditText
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:elevation="@dimen/_3sdp"
                    android:textSize="@dimen/_12sdp"
                    android:padding="@dimen/_10sdp"
                    android:background="@drawable/edt_border"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:text="987456221"
                    android:inputType="number"
                    android:textColor="#232333" />


                <TextView
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="#B8B8B8"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12sdp" />

                <EditText
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:elevation="@dimen/_3sdp"
                    android:textSize="@dimen/_12sdp"
                    android:padding="@dimen/_10sdp"
                    android:background="@drawable/edt_border"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:text="example@gmail.com"
                    android:inputType="textPassword"
                    android:textColor="#232333" />

                <CheckBox
                    android:textColor="@color/black"
                    android:checked="true"
                    android:text="@string/i_agree_to_the_terms_and_condition"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                </CheckBox>

                <TextView
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:id="@+id/TxtSingUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_Logo"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/btn_bg"
                    android:elevation="@dimen/_5sdp"
                    android:gravity="center"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/sign_in"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


        <LinearLayout
            android:id="@+id/ll_singUp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/already_have_an_account"
                android:textColor="#232333"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/blue"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</layout>