<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ProgressBar
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:id="@+id/progressBar"
            android:background="@drawable/progresh_background"
            android:elevation="6dp"
            android:padding="5dp"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/purple_200"
            android:visibility="gone"
            />

        <androidx.core.widget.NestedScrollView
            android:layout_above="@+id/ll_singUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:padding="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="vertical"
                >


                <ImageView
                    android:layout_marginLeft="-20dp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:id="@+id/iv_Logo"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/logo" />


                <TextView
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/welcome"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:textSize="@dimen/_22sdp" />

                <TextView
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_to_continue"
                    android:textColor="@color/black_new"
                    android:textStyle="bold"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_mobile_number"
                    android:textColor="@color/gray_new"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12sdp" />

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:elevation="@dimen/_3sdp"
                    android:textSize="@dimen/_12sdp"
                    android:padding="@dimen/_10sdp"
                    android:background="@drawable/edt_border"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:hint="example@gmail.com"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black_new" />

                <TextView
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/gray_new"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12sdp" />

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:elevation="@dimen/_3sdp"
                    android:textSize="@dimen/_12sdp"
                    android:padding="@dimen/_10sdp"
                    android:background="@drawable/edt_border"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:hint="example@gmail.com"
                    android:inputType="textPassword"
                    android:textColor="@color/black_new" />

                <TextView
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:id="@+id/loginID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_Logo"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/btn_bg"
                    android:elevation="@dimen/_5sdp"
                    android:gravity="center"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/sign_in"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:id="@+id/txtForogtPassword"
                    android:layout_marginLeft="20sp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:textSize="@dimen/_14sdp" />


                <TextView
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or_login_using"
                    android:textColor="@color/black_new"
                    android:textStyle="bold"
                    android:textSize="@dimen/_14sdp" />

                <LinearLayout
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <com.facebook.login.widget.LoginButton
                        android:visibility="gone"
                        android:id="@+id/connectWithFbButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_horizontal"
                        android:text="  connect_with_facebook" />


                    <ImageView
                        android:id="@+id/imgFacebook"
                        android:layout_centerInParent="true"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/fb"/>

                    <ImageView
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:id="@+id/imgGoogle"
                        android:layout_centerInParent="true"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/google"
                        />


                    <ImageView
                        android:visibility="gone"
                        android:id="@+id/img_tutor"
                        android:layout_centerInParent="true"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/tutor"
                        />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


        <LinearLayout
            android:id="@+id/ll_singUp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/don_t_have_a_account"
                android:textColor="@color/black_new"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/blue"
                android:textStyle="bold"
                />

        </LinearLayout>

    </RelativeLayout>

</layout>