<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:id="@+id/RRToolbar"
            android:background="@color/blue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            >

            <RelativeLayout
                android:id="@+id/RRback"
                android:visibility="visible"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="match_parent"
                >
                <ImageView
                    android:src="@drawable/cross"
                    android:layout_centerInParent="true"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp">

                </ImageView>

            </RelativeLayout>

            <TextView
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                android:text="@string/shipping_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>


        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:padding="@dimen/_5sdp"
            android:layout_below="@+id/RRToolbar"
            android:layout_above="@+id/ll_singUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fee_collected_from_customers"
                    android:textColor="#B8B8B8"
                    android:textStyle="bold"
                    android:textSize="@dimen/_16sdp" />

                <View
                    android:background="@color/gray_new"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_width="match_parent"
                    android:layout_height="1sp">

                </View>

                <LinearLayout
                    android:id="@+id/RRRetailsPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp">

                    <ImageView
                        android:id="@+id/imgRetailsPrice"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/blue_circle">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:text="@string/free_delivery"
                        android:textColor="#B8B8B8"
                        android:textSize="@dimen/_16sdp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/RRwholePrice"
                    android:padding="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <ImageView
                        android:id="@+id/imgWholePrice"
                        android:layout_gravity="center"
                        android:src="@drawable/blue_circle_new"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        >

                    </ImageView>

                    <TextView
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#B8B8B8"
                        android:text="@string/other"
                        android:textSize="@dimen/_16sdp" />

                </LinearLayout>


                <View
                    android:background="@color/gray_new"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_width="match_parent"
                    android:layout_height="1sp">

                </View>

                <TextView
                    android:id="@+id/txtestimated"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/estimated_fee_for_shipping_partner"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_16sdp" />


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</layout>